add Ex7.1 function js

--- a/EX7.4.html
+++ b/EX7.4.html
@@ -12,6 +12,10 @@
 
 </body>
 <script>
+    let a = "a";
+    let b = a;
+    b = "b"
+    console.log(a.b);
     const fruits = ["Banana", "Orange", "Apple",
         "Mango"];
 
