--- a/EX21.3.html
+++ b/EX21.3.html
@@ -26,7 +26,7 @@
     Btn.addEventListener("click", (e) => {
         const len = TE.value.length;
         if (len < 100) {
-            alert("Please Enter More Than 100 characters");
+            p.innerText="Please Enter More Than 100 characters";
         }
         else {
             console.log(TE.value);
